syntax = "proto3";

package pb;

option go_package = "github.com/wpcodevo/golang-mongodb/pb";

message CreatePostRequest {
  string Title = 2;
  string Content = 3;
  string Image = 4;
  string User = 5;
}
